--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,9 @@
 		}
 	],
 	"require": {
-		"php": ">=7.0"
+		"php": ">=7.0",
+
+		"silex/silex": "~1.3"
 	},
 	"require-dev": {
 		"ext-pdo_sqlite": "*",
