--- a/composer.json
+++ b/composer.json
@@ -18,10 +18,13 @@
 	"require-dev": {
 		"ext-pdo_sqlite": "*",
 
+		"phpunit/phpunit": "~5.0",
 		"whatthejeff/nyancat-phpunit-resultprinter": "~1.2",
 		"ockcyp/covers-validator": "~0.3",
 		"squizlabs/php_codesniffer": "~2.3",
-		"phpmd/phpmd": "~2.3"
+		"phpmd/phpmd": "~2.3",
+
+		"symfony/browser-kit": "~2.7"
 	},
 	"autoload": {
 		"psr-4": {
@@ -36,7 +39,7 @@
 	"scripts": {
 		"test": [
 			"composer validate --no-interaction",
-			"phpunit",
+			"vendor/bin/phpunit",
 			"vendor/bin/covers-validator"
 		],
 		"cs": [
