--- a/composer.json
+++ b/composer.json
@@ -31,6 +31,11 @@
 			"Queryr\\WebApi\\": "src/"
 		}
 	},
+	"autoload-dev": {
+		"psr-4": {
+			"Queryr\\WebApi\\Tests\\": "tests/"
+		}
+	},
 	"extra": {
 		"branch-alias": {
 			"dev-master": "0.1.x-dev"
@@ -43,8 +48,7 @@
 			"vendor/bin/covers-validator"
 		],
 		"cs": [
-			"composer phpcs",
-			"composer phpmd"
+			"composer phpcs"
 		],
 		"ci": [
 			"composer test",
