--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,21 @@
 	"require": {
 		"php": ">=7.0",
 
-		"silex/silex": "~1.3"
+		"silex/silex": "~1.3",
+
+		"wikibase/data-model-serialization": "~2.0",
+		"wikibase/internal-serialization": "~2.0",
+
+		"data-values/common": "@stable",
+		"data-values/geo": "@stable",
+		"data-values/number": "@stable",
+		"data-values/time": "@stable",
+
+		"queryr/entity-store": "~1.0",
+		"queryr/term-store": "~1.0",
+		"queryr/serialization": "~1.0",
+
+		"jeroen/query-engine": "~0.5"
 	},
 	"require-dev": {
 		"ext-pdo_sqlite": "*",
