--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,9 @@
 		"queryr/term-store": "~1.0",
 		"queryr/serialization": "~1.0",
 
-		"jeroen/wikibase-data-fixtures": "~1.1"
+		"jeroen/wikibase-data-fixtures": "~1.1",
+
+		"symfony/http-foundation": "~2.7"
 	},
 	"require-dev": {
 		"ext-pdo_sqlite": "*",
