--- a/composer.json
+++ b/composer.json
@@ -40,7 +40,9 @@
 		"squizlabs/php_codesniffer": "~2.3",
 		"phpmd/phpmd": "~2.3",
 
-		"symfony/browser-kit": "~2.7"
+		"symfony/browser-kit": "~2.7",
+
+		"silex/web-profiler": "~1.0"
 	},
 	"autoload": {
 		"psr-4": {
