--- a/composer.json
+++ b/composer.json
@@ -42,7 +42,8 @@
 
 		"symfony/browser-kit": "~2.7",
 
-		"silex/web-profiler": "~1.0"
+		"silex/web-profiler": "~1.0",
+		"sorien/silex-dbal-profiler": "~1.1"
 	},
 	"autoload": {
 		"psr-4": {
