--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
 
 		"silex/silex": "~1.3",
 
+		"wikibase/data-model": "~4.0",
 		"wikibase/data-model-serialization": "~2.0",
 		"wikibase/internal-serialization": "~2.0",
 
