Work around PHPCS + TravisCI issue

--- a/composer.json
+++ b/composer.json
@@ -76,7 +76,7 @@
 			"composer cs"
 		],
 		"phpcs": [
-			"vendor/bin/phpcs src/* tests/* app/* web/* --standard=phpcs.xml --extensions=php -sp"
+			"vendor/bin/phpcs src/* tests/* app/routes.php app/bootstrap.php app/Endpoints/* web/* --standard=phpcs.xml --extensions=php -sp"
 		],
 		"phpmd": [
 			"vendor/bin/phpmd src/,tests/ text phpmd.xml"
