--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
 		"php": ">=7.0",
 
 		"silex/silex": "~1.3",
+		"symfony/http-foundation": "~2.7",
 
 		"wikibase/data-model": "~4.0",
 		"wikibase/data-model-serialization": "~2.0",
@@ -27,9 +28,7 @@
 		"queryr/entity-store": "~1.0",
 		"queryr/term-store": "~1.0",
 
-		"jeroen/wikibase-data-fixtures": "~1.1",
-
-		"symfony/http-foundation": "~2.7"
+		"jeroen/wikibase-data-fixtures": "~1.1"
 	},
 	"require-dev": {
 		"ext-pdo_sqlite": "*",
